* Add completion for author, title, subject & keyword metadata
* Store the list of pages to be saved on hitting the save button, not waiting to
  choose the filename. Closes Debian bug #648627
  (post-dialog selection changes influence which pages are saved)
* Fixed progress text when importing files with multiple pages


1.3.5 (07.10.2015):

* Add prepend and append to PDF save options.
* Use new threading philosophy for scanning thread.
* Fix bug applying profiles with duplicated or invalid options
* Selecting single-sided pages also selects facing page. Closes bug #206
  (Selecting 1-sided/front after 2-sided/back has a logical problem)
* Fixed scan->unpaper->OCR chaining.
* Changed defaults so that unpaper does not run by default after scanning.
* Enabled hours, minutes and seconds in filename template.
  Closes patch #12 (Enable hours, minutes and seconds in default filename).
  Thanks to Jason Kankiewicz for the patch.
* Update to German translation (thanks to Tobias Bannert)
* Update to Slovak translation (thanks to Dusan Kazik)


1.3.4 (04.08.2015):

* Fix startup crash due to incorrect MessageDialog type and buttons


1.3.3 (01.08.2015):

* Suppress warnings when passed boolean as empty string
  Closes LP: #844582 ("Invalid argument" when trying to scan)
* Moved config file format to JSON. JSON::PP is a core module,
  so this does not create a new dependency.
* + option not to show dialog messages
* Trap errors from unpaper, rotate, crop, threshold, negate, unsharp
  processing tools
  Closes bug #198 (empty pages when saving, GIMP, or printing)
* Removed dependency on liblinux-distribution-perl as not available on FreeBSD
* Also support gconftool-2 when checking for email client
  Closes bug #200 (it doesn't attach on Fedora 21 (with thunderbird))
* Update to German translation (thanks to Tobias Bannert)
* Fixed program hang importing an empty file at the same time as other files
* Rewrite threading system to simplify it and remove many race conditions