@@ -7,6 +7,9 @@
   choose the filename. Closes Debian bug #648627
   (post-dialog selection changes influence which pages are saved)
 * Fixed progress text when importing files with multiple pages
+* Some scanners activate paper-width and paper-height only for the ADF, and thus
+  send "invalid argument" when setting the paper size for the flatbed. Trap this
+  by also testing whether these options are active when setting the paper size.
 
 
 1.3.5 (07.10.2015):
